Enable UELlama and SpeechRecognition features.

--- a/PTuber.uproject
+++ b/PTuber.uproject
@@ -118,6 +118,10 @@
 		{
 			"Name": "UELlama",
 			"Enabled": true
+		},
+		{
+			"Name": "SpeechRecognition",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
